--- a/TP4/Dockerfile1
+++ b/TP4/Dockerfile1
@@ -1,9 +1,10 @@
 FROM python
-RUN apt-get update && apt-get upgrade -y 
-RUN apt-get install -y build-essential pkg-config python-dev python3-pip default-libmysqlclient-dev
+RUN apt-get update && apt-get upgrade -y && 
+RUN apt-get install -y build-essential pkg-config python-dev python3-pip default-libmysqlclient-dev && \
 RUN pip3 install --upgrade pip 
 RUN pip3 install flask-mysqldb mysql-connector-python
 RUN mkdir -p /srv/templates 
-COPY index.html /srv/templates/ COPY app_1.py /srv/ 
+COPY index.html /srv/templates
+COPY app_1.py /srv/ 
 CMD ["flask", "--app", "/srv/app_1", "run", "--host=0.0.0.0"] 
 
